2010-02-16  Abel Cheung  <abelcheung@gmail.com>

	* notation/*.php:
	- Point notation links to official page instead.

2010-02-16  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- Don't add any hook in admin page.

2010-02-16  Abel Cheung  <abelcheung@gmail.com>

	* notation/lilypond.php:
	- Precisely determine the version that corresponds to the safe mode
	  option change.

2010-02-12  Abel Cheung  <abelcheung@gmail.com>

	* notation/lilypond.php:
	- (conversion_step1) Yet another fix for lilypond invocation. Safe
	  mode is there after all.

2010-02-12  Abel Cheung  <abelcheung@gmail.com>

	* *.php, notation/*.php, misc/showcode.php:
	- Update copyright, switch to AGPL v3.

2010-02-12  Abel Cheung  <abelcheung@gmail.com>

	* misc/ZeroClipboard.js:
	- Use newest upstream release, 1.0.5.

2010-02-12  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- (scorerender_admin_add_js) Rename to scorerender_admin_head().
	- Add help icon next to admin page header, and make help text foldable.

2010-02-11  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- (scorerender_admin_options) Fix incorrectly placed html tags in
	  admin form, add icon to admin title.

2009-08-22  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-utils.php:
	- (search_path) New func, for searching program in PATH environment
	  variable.
	* wp-scorerender.php:
	- (scorerender_get_def_settings) Move notation program searching to
	  each notation file.
	* scorerender-class.php, notation/*.php:
	- (define_setting_value) New func, for detecting notation program
	  location.

2009-08-13  Abel Cheung  <abelcheung@gmail.com>

	* notation/lilypond.php:
	- (conversion_step1) Detect lilypond version and adjust command line
	  accordingly. Even lilypond command line options are unstable.
	- (lilypond_version) New func.

2009-08-08  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php, wp-scorerender.php, scorerender-class.php: